aggiunto supporto DB aggiornati colori primari Interfacce "login" e "registrazione" sistemate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Talks">
-        <activity android:name=".Registrazione"></activity>
+        <activity android:name=".Registrazione"/>
         <activity android:name=".CreaPost" />
         <activity android:name=".Profilo" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
