aggiunta ricerca lista profili

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".CreaTalk" />
         <activity android:name=".Profilo" />
         <activity android:name=".Login" />
+        <activity android:name=".ListaProfili" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
